--- a/modeling_supplement.Rmd
+++ b/modeling_supplement.Rmd
@@ -25,7 +25,7 @@ In other words, we model the regression coefficients for each unit as drawn from
 
 # To do:
 - non-additive trial type effects (cued vs choice treated as unrelated?)
-- negative binomial or added gaussian in linear predictor
+- ~~negative binomial or added gaussian in linear predictor~~ seems unnecessary given low spike counts
 - model of separate subpopulations
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
