--- a/modeling_supplement.Rmd
+++ b/modeling_supplement.Rmd
@@ -43,12 +43,13 @@ Given this model, we are particularly interested in inferring $\mu$ and $\Sigma$
 population of cells from which our experimental sample was drawn.
 
 # To do:
-- effects of cuing in model
+- ~~effects of cuing in model~~
 - ~~density plot of posteriors with units on top (via generated quantities in stan?)~~
 - are the same cells outliers in successive time periods?
 
 # Further models
 - model social decision as a function of spike counts 
+    - ~~use glmnet for prediction~~
     - use Vehtari and Gelman paper for calculating expected log likelihood (or posterior) of heldout data in stan
 - quantify OT effects
     - on choice
